Check if entry match is good enough after every field comparison

Avoid needless comparisons if the threshold for a perfect match is
already met.

BUG: 349410
FIXED-IN: 3.2